--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>Title</title>
 </head>
 <body>
-
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    //通过引入这个脚本后会在window下增加一个io的全局变量，通过调用它并传入路径可以连接socket.io服务器
+    var socket = io('/');
+    socket.on('connect',function () {
+        console.log('连接服务器成功');
+        socket.send('服务器你好');
+    });
+    //断开链接 一般用不到
+    /*socket.on('disconnect',function () {
+        console.log('断开服务器链接')
+    });*/
+    //接收
+    socket.on('message',function (message) {
+        console.log(message);
+    })
+</script>
 </body>
 </html>
